<resources>
    <string name="app_name">Emergency Escape</string>

    <string name="google_maps_key">XX</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Email not valid</string>
    <string name="error_invalid_password">Password too short</string>
    <string name="error_incorrect_password">Incorrect password</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_maps">Map</string>
    <string name="action_settings">Settings</string>

    <string name="action_emergency">Emergency</string>
    <string name="action_no_emergency">No Emergency</string>
    <string name="action_logout">Logout</string>
    <string name="action_text">Text</string>
    <string name="action_qr_code">QRCode</string>
    <string name="action_tap">Tap</string>

    <string name="mappa">Map</string>
    <string name="action_log_in">Login</string>
    <string name="action_remember_me">Remember Me</string>
    <string name="welcome_message">Welcome back</string>
    <string name="error_message">Error</string>
    <string name="wrong_user_pass">Wrong username or password!</string>
    <string name="departure_room">Departure Room</string>
    <string name="quote">Quote</string>
    <string name="insert_destination">Insert Destination:</string>
    <string name="action_ok">Ok</string>
    <string name="insert_departure">Insert Departure:</string>
    <string name="title_activity_noem_tap">NoemTapActivity</string>
    <string name="itinerary">Itinerary</string>


    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_location_label">Location</string>

    <!-- Key name for storing location in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_location_key" translatable="false">location</string>

    <!-- Default postal code for location preference [CHAR LIMIT=NONE] -->
    <string name="pref_location_default" translatable="false">94043</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Emergency Notifications</string>

    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

    <!-- Strings for formatting weather-related data -->

    <!-- Label for the temperature units preference [CHAR LIMIT=30] -->
    <string name="pref_units_label">Temperature Units</string>

    <!-- Label for metric option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_metric" translatable="false">Metric</string>

    <!-- Label for imperial option in temperature unit preference [CHAR LIMIT=25] -->
    <string name="pref_units_label_imperial">Imperial</string>

    <!-- Key name for temperature unit preference in SharedPreferences [CHAR LIMIT=NONE] -->
    <string name="pref_units_key" translatable="false">units</string>

    <!-- Value in SharedPreferences for metric temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_metric" translatable="false">metric</string>

    <!-- Value in SharedPreferences for imperial temperature unit option [CHAR LIMIT=NONE] -->
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="title_activity_settings2">Settings</string>

    <string name="select_map_label">Select Map</string>
    <string name="select_map_key" translatable="false">id</string>
    <string name="map_id_1" translatable="false">1</string>
    <string name="map_id_2" translatable="false">2</string>
    <string name="map_value_1" translatable="false">univpm</string>
    <string name="map_value_2" translatable="false">univpm_valori_casuali</string>
    <string name="select_floor">Select floor</string>
    <string name="select_map">Select Map</string>
    <string name="wrong_qr">The QR code value doesn\'t rappresent a valid room, please insert a correct QR-code</string>
    <string name="error_qr">An error occoured when decoding the QR-code, not a QR-code.</string>
    <string name="arrived_message">You arrived to destination!</string>
    <string name="stairs_message">Go to quote</string>
    <string name="action_second_path">Get alternative path</string>
    <string name="action_best_path">Get best path</string>
    <string name="action_refresh_data">Refresh</string>
    <string name="wrong_text_input">Wrong Input, Please insert a correct one (hint: 145DICEA)</string>
    <string name="pref_map_key" translatable="false">map_selected</string>


</resources>